--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>somersault</h1>
     </div>
     <div class="sub-title">
-        <button class="outline-button"><a href="https://github.com/souvikmaity/somersault"><i class="fab fa-github fa-lg"></i>  GITHUB</a></button>
+        <button class="outline-button" onclick="location.href='https://github.com/souvikmaity/somersault'"><i class="fab fa-github fa-lg"></i>  GITHUB</button>
     </div>
     <div class="sub-title txt">
       somersault is a CSS flex box layout for developing responsive interfaces and UI kits.
